# opi

./: .codespellignore  .gitignore  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: main.yml  pr_checks.yml
docs/: Makefile  conf.py  index.md
docs/_static/css/: custom.css
docs/_tools/: __init__.py  jupyter_conv.py
docs/contents/: dev_guide.md  how_to_cite.md  how_to_contribute.md  install.md  versions.md
docs/contents/notebooks/: adld_dftd4.ipynb  adld_hfld.ipynb  atomic_fukui_indices.ipynb  chemeleon_orca.ipynb  conformer_generation.ipynb  covaled_ethane.ipynb  extopt.ipynb  led.ipynb  (+10 more)
examples/exmp001_scf/: job.py
examples/exmp002_scf_ccsdt/: job.py
examples/exmp003_opt/: inp.xyz  job.py
examples/exmp004_freq/: job.py
examples/exmp005_dft/: inp.xyz  job.py
examples/exmp006_mp2/: job.py
examples/exmp007_cpcm/: job.py
examples/exmp008_relativ_corr/: inp.xyz  job.py
examples/exmp009_rama/: inp.xyz  job.py
examples/exmp010_uvvis/: job.py
examples/exmp011_epr/: inp.xyz  job.py
examples/exmp012_nmr/: inp.xyz  job.py
examples/exmp013_bs/: inp.xyz  job.py
examples/exmp014_led/: inp.xyz  job.py
examples/exmp015_pop_analysis/: job.py
examples/exmp016_autoci/: inp.xyz  job.py
examples/exmp017_roci/: inp.xyz  job.py
examples/exmp018_cipsi/: job.py
examples/exmp019_engrad/: job.py
examples/exmp020_smd/: inp.xyz  job.py
examples/exmp021_basis/: job.py
examples/exmp022_scf/: inp.xyz  job.py
examples/exmp023_thermo/: job.py
examples/exmp024_blocks/: job.py
examples/exmp025_goat/: inp.xyz  job.py
examples/exmp026_scan/: inp.xyz  job.py
examples/exmp027_constraints/: job.py
examples/exmp028_nevpt2/: job.py
examples/exmp029_oomp2/: job.py
examples/exmp030_eom/: job.py
examples/exmp031_dlpno/: job.py
examples/exmp032_fragbasis/: inp.xyz  job.py
examples/exmp033_mo_getters/: job.py
examples/exmp034_strucfile/: inp.xyz  job.py
examples/exmp035_moplot/: job.py
examples/exmp036_solvator/: inp.xyz  job.py
examples/exmp037_s2/: inp.xyz  job.py
examples/exmp038_integrals/: job.py
examples/exmp039_neb/: job.py  prod.xyz  reac.xyz
examples/exmp040_xzyfraglib/: frag_lib.xyz  job.py  struc.xyz
examples/exmp041_graph/: job.py
examples/exmp042_element/: inp.xyz  job.py
examples/exmp043_dummy_atom/: inp.xyz  job.py
examples/exmp044_from_ase/: job.py
examples/exmp045_existing_calc/: job.py
examples/exmp046_server/: h2o.xyz  job.py
src/opi/: __init__.py  core.py
tests/: conftest.py  test_atom.py  test_auto_ci_en.py  test_base.py  test_bs.py  test_calc_info.py  test_cas_energy.py  test_chem_shift.py  test_cipsi.py  test_cite.py  test_coord.py  test_dftenergy.py  test_dipole.py  test_efgtensor.py  test_energy_extrap.py  test_geometry.py  test_gradient.py  test_grepper.py  test_gtensor.py  test_header.py  test_hess.py  test_hirshfeldpopanalysis.py  test_led.py  test_mayerpopulationanalysis.py  test_mbis.py  test_mdci.py  test_molecular_orbitals.py  test_molecule.py  test_mos.py  test_mp2.py  test_nat_orbitals.py  test_pal.py  test_polarisation.py  test_popanalysis.py  test_quadruple.py  test_recepies.py  test_roci_en.py  test_scfenergy.py  test_solvation.py  test_spectrum.py  (+5 more)
tests/fixtures/: get_file.py  validate_schema.py
(+240 files in other folders)
